--- a/helm.yaml
+++ b/helm.yaml
@@ -3,3 +3,10 @@ image:
 
 port: 8080
 component: cart
+
+serviceAccount:
+  create: true
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::904827379241:role/eks-prod-ssm-pm-role
+PARAMETERS: "REDIS_HOST,roboshop.prod.cart.redis_host CATALOGUE_HOST,roboshop.prod.cart.catalogue_host CATALOGUE_PORT,roboshop.prod.cart.catalogue_port"
+
